Add a minor presentation update

--- a/hackernest_nyc_nov_17_2014.html
+++ b/hackernest_nyc_nov_17_2014.html
@@ -76,10 +76,10 @@
           <li>Manchester</li>
           <li>Phoenix</li>
         </ul>
-        <h2 id="title-growing">... grew to <span class="city-count">20</span> cities worldwide...</h2>
+        <h2 id="title-growing">... grew to <span class="city-count">20+</span> cities worldwide...</h2>
       </div>
       <div id="new-york" class="step" data-x="-6900" data-y="-2400" data-z="-2700" data-duration="3">
-        <h2 id="title-new-york">... New York is city #<span class="city-count">21</span>.</h2>
+        <h2 id="title-new-york">... and now, <strong>New York</strong>.</h2>
       </div>
       <div id="thanks" class="step" data-x="-4500" data-y="-2200">
         <h1 class="welcome">Welcome to</h1>
