--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div id="venue" class="step thanks" data-x="-2800" data-y="-3000" data-z="-3000">
         <h1>Venue sponsor</h1>
         <div class="logo">
-          <img src="img/dbc.jpeg" alt="" />
+          <img src="img/rise.png" alt="" />
         </div>
         <div class="logo-text">
           <p></p>
@@ -101,15 +101,6 @@
         </div>
         <div class="logo-text">
           <p>We are proud to have RBC as a North American HackerNest Tech Social Sponsor!</p>
-        </div>
-      </div>
-      <div id="sponsor-2" class="step thanks" data-x="-2800" data-y="-1800" data-z="-3000">
-        <h1>Event Sponsor</h1>
-        <div class="logo">
-          <img src="img/dubsmash.jpeg" alt="" />
-        </div>
-        <div class="logo-text">
-          <p>Dubsmash lets people express themselves by ‘being’ the content they love.dbc</p>
         </div>
       </div>
       <div id="beer" class="step thanks" data-x="-2800" data-y="-1200" data-z="-3000">
