--- a/index.html
+++ b/index.html
@@ -88,22 +88,22 @@
       <div id="venue" class="step thanks" data-x="-2800" data-y="-3000" data-z="-3000">
         <h1>Venue sponsor</h1>
         <div class="logo">
-          <img src="img/gct-logo.jpg" alt="" />
+          <img src="img/laireast.png" alt="" />
         </div>
         <div class="logo-text">
-          <p></p>
+          <p>Coworking space and community for global startups and entrepreneurs.</p>
         </div>
       </div>
       <div id="sponsor-1" class="step thanks" data-x="-2800" data-y="-2400" data-z="-3000">
-        <h1>North American Sponsor</h1>
+        <h1>North American sponsor</h1>
         <div class="logo">
-          <img src="img/rbc.jpg" alt="" style="width: 50%;"/>
+          <img src="img/aws.png" alt="" style="width: 50%;"/>
         </div>
         <div class="logo-text">
-          <p>We are proud to have RBC as a North American HackerNest Tech Social Sponsor!</p>
+          <p>We are proud to have Amazon AWS as a North American HackerNest Tech Social Sponsor!</p>
         </div>
       </div>
-      <div id="beer" class="step thanks" data-x="-2800" data-y="-1200" data-z="-3000">
+      <div id="beer" class="step thanks" data-x="-2800" data-y="-1800" data-z="-3000">
         <h1>Beer partner</h1>
         <div class="logo">
           <img src="img/brooklyn-brewery.jpg" alt="" />
